--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
